# pymdps

./: .gitignore  404.html  Cargo.toml  Makefile  README.md  index.html  pyproject.toml  sitemap.xml
.github/: release.yml
.github/workflows/: ci.yml  publish-docs.yml  release.yml  tests.yml  update-docs.yml
about/: alternatives.html  contributing.html  index.html
api_reference/: index.html
assets/: logo-no-text.afdesign  logo-with-text.afdesign
docs/: mkdocs.yml
docs/pages/about/: alternatives.md  contributing.md  index.md
docs/pages/assets/: favicon.afdesign
docs/pages/getting_started/: first_steps.md  index.md
examples/: gridworld.py
getting_started/: first_steps.html  index.html
python/pymdps/problems/: __init__.py
reference/: index.html
search/: search_index.json
src/: lib.rs
src/problems/: base.rs  gridworld.rs  mod.rs
tests/: test_basemdp.py
